--- a/HelloLocal/src/main/resources/application.conf
+++ b/HelloLocal/src/main/resources/application.conf
@@ -1,17 +1,15 @@
 akka {
-  //loglevel = "DEBUG"
+  // loglevel = "DEBUG"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
   }
   remote {
     transport = "akka.remote.netty.NettyRemoteTransport"
-    //log-sent-messages = on
-    //log-received-messages = on
-    netty {
+    log-sent-messages = on
+    log-received-messages = on
+    netty.tcp {
       hostname = "127.0.0.1"
       port = 0
     }
   }
 }
-
-
